# riscv-interpreter

./: Cargo.toml  README.md  per_opcode_asm_report.md
crates/elf/: Cargo.toml
crates/elf/src/: lib.rs
crates/precompiles/: Cargo.toml
crates/precompiles/src/: bls12_381_hint.rs  bn254_hint.rs  config.rs  ecc.rs  encoding.rs  hashes.rs  int256.rs  lib.rs  modular.rs  pairing.rs
crates/precompiles/tests/: int256_unit.rs  modular_unit.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
crates/rv32im/: Cargo.toml
crates/rv32im/src/: cpu.rs  decode.rs  lib.rs  memory.rs
tests/fixtures/echo-guest/: Cargo.toml  link.ld
tests/fixtures/echo-guest/.cargo/: config.toml
tests/fixtures/echo-guest/src/: main.rs
tests/fixtures/hash-guest/: Cargo.toml
tests/fixtures/hash-guest/src/: main.rs
tools/canonical-gas/: Cargo.toml
tools/canonical-gas/src/: main.rs
tools/input-prep/: Cargo.toml
tools/input-prep/src/: main.rs
